--- a/v7/appcompat/res/values-v11/themes_base.xml
+++ b/v7/appcompat/res/values-v11/themes_base.xml
@@ -37,6 +37,7 @@
         <item name="actionButtonStyle">?android:attr/actionButtonStyle</item>
         <item name="dividerVertical">?android:attr/dividerVertical</item>
         <item name="dividerHorizontal">?android:attr/dividerHorizontal</item>
+        <item name="actionBarWidgetTheme">@null</item>
 
         <!-- Required for use of support_simple_spinner_dropdown_item.xml -->
         <item name="listPreferredItemHeight">?android:attr/listPreferredItemHeight</item>
@@ -56,6 +57,7 @@
         <item name="actionButtonStyle">?android:attr/actionButtonStyle</item>
         <item name="dividerVertical">?android:attr/dividerVertical</item>
         <item name="dividerHorizontal">?android:attr/dividerHorizontal</item>
+        <item name="actionBarWidgetTheme">@null</item>
 
         <!-- Required for use of support_simple_spinner_dropdown_item.xml -->
         <item name="listPreferredItemHeight">?android:attr/listPreferredItemHeight</item>
