--- a/v7/appcompat/res/values-xlarge/bools.xml
+++ b/v7/appcompat/res/values-xlarge/bools.xml
@@ -15,11 +15,5 @@
 -->
 
 <resources>
-    <!-- Minimum width of the search view text entry area. -->
-    <dimen name="abc_search_view_text_min_width">192dip</dimen>
-    <!-- The maximum number of action buttons that should be permitted within
-     an action bar/action mode. This will be used to determine how many
-     showAsAction="ifRoom" items can fit. "always" items can override this. -->
-    <integer name="abc_max_action_buttons">4</integer>
-
+    <bool name="abc_action_bar_expanded_action_views_exclusive">false</bool>
 </resources>
