Ensure native Action Mode position on HC
- Added a new layout to the decor for v11+
  which ensures that the compat action bar
  is at least invisible when a native action
  mode is started.

Bug: 9251554

Signed-off-by: Chris Banes <chrisbanes@google.com>

Change-Id: I0932aaaa0b74166de6cb9134fd96d019ec204119

--- a/v7/appcompat/res/layout-v11/abc_action_bar_decor.xml
+++ b/v7/appcompat/res/layout-v11/abc_action_bar_decor.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The Android Open Source Project
+<!-- Copyright (C) 2013 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,7 +14,9 @@
      limitations under the License.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.internal.widget.NativeActionModeAwareLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/action_bar_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -22,4 +24,4 @@
 
     <include layout="@layout/abc_action_bar_decor_include" />
 
-</LinearLayout>
+</android.support.v7.internal.widget.NativeActionModeAwareLayout>
