Fix AppCompat SearchView suggestions styling
Bug: 9817944
Change-Id: Ifab68dec811eb784491261a33e369f4e477b32e3

--- a/v7/appcompat/res/values/styles.xml
+++ b/v7/appcompat/res/values/styles.xml
@@ -224,7 +224,7 @@
     </style>
 
     <style name="Widget.AppCompat.Light.AutoCompleteTextView"
-           parent="Widget.AppCompat.Base.AutoCompleteTextView">
+           parent="Widget.AppCompat.Light.Base.AutoCompleteTextView">
     </style>
 
     <style name="Widget.AppCompat.ActivityChooserView"
