Fix ABC's ShareActionProvider use of LinearLayout
- Renamed LinearLayout ICS' internal methods name
  to not conflict with private methods added in v11+.
- Fixed ActionMenuView to make use of LinearLayoutICS'
  callbacks (as per framework).
- Changed ShareActionProvider to use framework provided
  LinearLayout on ICS+.

Bug: 9885077
Change-Id: Icd42b87a4f9d8f3d5c2200ca705f43c68c0400dc

--- a/v7/appcompat/res/values-v14/styles_base.xml
+++ b/v7/appcompat/res/values-v14/styles_base.xml
@@ -209,4 +209,12 @@
            parent="@android:TextAppearance.Holo.SearchResult.Subtitle">
     </style>
 
+    <style name="Widget.AppCompat.Base.ActivityChooserView" parent="">
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/abc_ab_share_pack_holo_dark</item>
+        <item name="android:divider">?attr/dividerVertical</item>
+        <item name="android:showDividers">middle</item>
+        <item name="android:dividerPadding">6dip</item>
+    </style>
+
 </resources>
