MediaRouter dialog layout improvements
Make the MediaRouter dialog layout match old platform standards.

Bug 9863000

Change-Id: Idabc17beccc1e91fa4c02fdcbeeedb537ea974a9
(cherry picked from commit 4ba232325a4ec8f4e0681a290d2fe6ad22065437)

--- a/v7/mediarouter/res/layout-v11/mr_media_route_controller_dialog.xml
+++ b/v7/mediarouter/res/layout-v11/mr_media_route_controller_dialog.xml
@@ -50,18 +50,11 @@
     <LinearLayout android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   style="?attr/buttonBarStyle">
-        <View android:layout_width="0dp"
-              android:layout_height="0dp"
-              android:layout_weight="0.25" />
         <Button android:id="@+id/media_route_disconnect_button"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 style="?attr/buttonBarButtonStyle"
                 android:gravity="center"
                 android:text="@string/mr_media_route_controller_disconnect" />
-        <View android:layout_width="0dp"
-              android:layout_height="0dp"
-              android:layout_weight="0.25" />
     </LinearLayout>
 </LinearLayout>
